--- a/k-median/rellag.tex
+++ b/k-median/rellag.tex
@@ -97,6 +97,7 @@ Defina $ v \coloneqq av^1 + bv^2$ e $w \coloneqq aw^1 + bw^2$. Note que $(v,w)$ 
 
 \begin{lemma}
     \label{k-median_relLag_lema1}
+    Seja $(X_1,X_2)$ o par devolvido por {\sc BuscaBinária}$_\eps$ com $|X_2| \neq 0$. Seja também $a,b > 0$ tal que $a + b = 1 $ e $a|X_1| + b|X_2| = k$, então
     \[a \, \custo(X_1) + b \,\custo(X_2) \leq (1+\epsilon) 2\opt(I).\]
 \end{lemma}
 \begin{proof}
