--- a/poster/beamerthemeposter-exemplo.sty
+++ b/poster/beamerthemeposter-exemplo.sty
@@ -96,7 +96,7 @@
         \begin{center}
           % {\ }\\[1mm]
           \includegraphics[width=0.9\linewidth]{imgs/ime.png}\\[9mm]
-          \includegraphics[width=0.9\linewidth]{imgs/fap.png}
+          % \includegraphics[width=0.9\linewidth]{imgs/fap.png}
         \end{center}
       \end{column}
 	\begin{column}{.715\linewidth}
@@ -111,8 +111,9 @@
       \begin{column}{.14\linewidth}
         \begin{center}
           {\ }\\[1mm]
-          \includegraphics[width=0.9\linewidth]{imgs/siicusp.png}\\[5mm]
-          \includegraphics[width=0.9\linewidth]{imgs/prpi.png}
+          \includegraphics[width=0.9\linewidth]{imgs/fap.png}\\[9mm]
+          % \includegraphics[width=0.9\linewidth]{imgs/siicusp.png}\\[5mm]
+          % \includegraphics[width=0.9\linewidth]{imgs/prpi.png}
         \end{center}
       \end{column}
     \vspace{1cm}
