--- a/packages.sty
+++ b/packages.sty
@@ -12,9 +12,10 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{enumerate}
-\usepackage{tikz}
+\usepackage{tikzit}
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
+% \usepackage{tikzit}
 %% Floating package
 \usepackage{floatflt,epsfig,epsf}
 \renewcommand{\baselinestretch}{1.2}
@@ -26,7 +27,7 @@
 \renewcommand{\algorithmicend}{\textbf{Fim}}
 \renewcommand{\algorithmicif}{\textbf{Se}}
 \renewcommand{\algorithmicthen}{\textbf{então}}
-\renewcommand{\algorithmicelse}{\textbf{senão}}
+\renewcommand{\algorithmicelse}{\textbf{Senão}}
 \renewcommand{\algorithmicfor}{\textbf{Para}}
 \renewcommand{\algorithmicdo}{\textbf{faça}}
 \renewcommand{\algorithmicwhile}{\textbf{Enquanto}}
